--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="4" />
     <instrumentation android:targetPackage="org.projectvoodoo.ocuvstabilitytest" android:name="android.test.InstrumentationTestRunner" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:theme="@android:style/Theme.Light.NoTitleBar" android:label="@string/app_name">
 
     <uses-library android:name="android.test.runner" />
     </application>
