--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,5 +8,12 @@
     <application android:icon="@drawable/icon" android:theme="@android:style/Theme.Light.NoTitleBar" android:label="@string/app_name">
 
     <uses-library android:name="android.test.runner" />
+            <activity android:name="org.projectvoodoo.ocuvstabilitytest">
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER"></category>
+            </intent-filter>
+        </activity>
+        <service android:name="org.projectvoodoo.ocuvstabilitytest.stabilityTest"></service>
     </application>
 </manifest>
