--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.projectvoodoo.ocuvstabilitytest"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="4" />
-    <instrumentation android:targetPackage="org.projectvoodoo.ocuvstabilitytest" android:name="android.test.InstrumentationTestRunner" />
-    <application android:icon="@drawable/icon" android:theme="@android:style/Theme.Light.NoTitleBar" android:label="@string/app_name">
+    package="org.projectvoodoo.ocuvstabilitytest"
+    android:versionCode="1"
+    android:versionName="@string/version_name">
 
-    <uses-library android:name="android.test.runner" />
-            <activity android:name="org.projectvoodoo.ocuvstabilitytest">
+    <uses-sdk android:minSdkVersion="4" />
+
+    <instrumentation
+        android:targetPackage="org.projectvoodoo.ocuvstabilitytest"
+        android:name="android.test.InstrumentationTestRunner" />
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:name="StabilityApp" >
+
+        <uses-library android:name="android.test.runner" />
+
+        <!-- main home activity -->
+        <activity android:name="HomeActivity">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER"></category>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="org.projectvoodoo.ocuvstabilitytest.stabilityTest"></service>
+
+        <service android:name="org.projectvoodoo.ocuvstabilitytest.stabilityTest" />
     </application>
 </manifest>
