added view to show time_in_state info
also added button on homescreen to show the view
just taken from my CpuSpy app

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,12 @@
             </intent-filter>
         </activity>
 
+        <!-- time_in_state view -->
+        <activity
+            android:name="TimeInStateActivity"
+            android:label="CPU - Time In State">
+        </activity>
+
         <service android:name="org.projectvoodoo.ocuvstabilitytest.stabilityTest" />
     </application>
 </manifest>
